# Pelajarin.ai

./: .gitignore  Agent_3_Blueprint.md  Brief Detail LandingPage.md  PROJECT_BLUEPRINT.md  PROJECT_OVERVIEW.md  docker-compose.redis.yml  docker-compose.yml
backend/: .env.example  clear_redis_cache.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250727_add_performance_indexes.py  2231c705198a_add_learning_outcomes_column_to_courses_.py  4c880efadbad_initial_database_schema.py  b322bd234187_add_learning_outcomes_column_to_courses_.py  fe42b2a828b7_add_content_blocks_and_summary_to_sub_.py  manual_add_difficulty_to_courses.py
backend/belajaryuk_api/: main.py
backend/belajaryuk_api/core/: api_key_manager.py  config.py  model_config.py  security.py
backend/belajaryuk_api/db/: session.py
backend/belajaryuk_api/models/: assessment.py  course.py  module.py  sub_topic.py  user.py
backend/belajaryuk_api/prompts/: architect_prompt.py  experience_generator_prompt.py  gatekeeper_prompt.py
backend/belajaryuk_api/routers/: auth_router.py  course_router.py  sub_topic_router.py  user_router.py
backend/belajaryuk_api/schemas/: course_schema.py  sub_topic_schema.py  user_schema.py
backend/belajaryuk_api/services/: ai_service.py  cancellation_service.py  content_generation_service.py  course_service.py  course_service_fixed.py  redis_service.py  user_service.py
backend/belajaryuk_api/utils/: input_validator.py  sse_broadcaster.py  test_regex.py
backend/scripts/: test_course_flow.py
frontend/: package-lock.json  package.json  (+1 more)
(+66 files in other folders)
