[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["KimiDandy <kimidandy.id@gmail.com>"]
readme = "README.md"
packages = [{include = "belajaryuk_api"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
python-dotenv = ">=1.1.1,<2.0.0"
pydantic = {extras = ["email"], version = ">=2.11.7,<3.0.0"}
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
alembic = ">=1.16.4,<2.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-jose = {extras = ["cryptography"], version = ">=3.5.0,<4.0.0"}
google-generativeai = ">=0.8.5,<0.9.0"
python-multipart = ">=0.0.9,<0.0.10"
bcrypt = "^4.3.0"
redis = "^6.2.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
faker = "^37.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
